--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<script type="text/javascript" src="assets/js/lib/jquery-3.2.1.min.js"></script>
 </head>
 <body>
+	<div id="container">
+		<h1>To-Do List</h1>
+		<input type="text">
+		<ul>
+			<li><span>X</span> Zhilin</li>
+			<li><span>X</span> YanYan</li>
+			<li><span>X</span> Nancy</li>
+		</ul>
+	</div>
+
 
 <script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
