--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 	<meta charset="UTF-8">
 	<title>ToDo List</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div id="container">
-		<h1>To-Do List</h1>
-		<input type="text">
+		<h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i></h1>
+		<input type="text" placeholder="Add New Todo">
 		<ul>
-			<li><span>X</span> Zhilin</li>
-			<li><span>X</span> YanYan</li>
-			<li><span>X</span> Nancy</li>
+			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Zhilin</li>
+			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> YanYan</li>
+			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Nancy</li>
 		</ul>
 	</div>
 
