--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i></h1>
 		<input type="text" placeholder="Add New Todo">
 		<ul>
-			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Zhilin</li>
-			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> YanYan</li>
-			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Nancy</li>
+			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Change Me</li>
+			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Change Me</li>
+			<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Change Me</li>
 		</ul>
 	</div>
 
